@@ -27,13 +27,19 @@
 #define RLE_RLE_H
 
 #include <stddef.h>
+#include <stdint.h>
+
+__attribute__((visibility("default"), always_inline, const))
+inline size_t rle_encode_size_bound(size_t len) {
+    return len + (len + INT8_MAX - 1) / INT8_MAX;
+}
 
 __attribute__((visibility("default"), warn_unused_result, nonnull(1,2)))
-int rle_encode_bytes(unsigned char * const dst, size_t * const dstlen,
-                     unsigned char const * const src, size_t srclen);
+size_t rle_encode_bytes(unsigned char * const dst, size_t * const dstlen,
+                        unsigned char const * const src, size_t srclen);
 
 __attribute__((visibility("default"), warn_unused_result, nonnull(1,2)))
-int rle_decode_bytes(unsigned char * const dst, size_t * const dstlen,
-                     unsigned char const * const src, size_t srclen);
+size_t rle_decode_bytes(unsigned char * const dst, size_t * const dstlen,
+                        unsigned char const * const src, size_t srclen);
 
 #endif // RLE_RLE_H
