@@ -36,21 +36,22 @@ int main(void) {
     size_t enclen;
     unsigned char dec[100];
     size_t declen;
-    int r;
+    size_t r;
 
     memset(input, 'a', sizeof input);
     input[99] = '\0';
 
     enclen = sizeof enc;
     r = rle_encode_bytes(enc, &enclen, input, sizeof input);
-    assert(!r);
+    assert(r == sizeof input);
     assert(enclen <= sizeof enc);
 
     declen = sizeof dec;
     r = rle_decode_bytes(dec, &declen, enc, enclen);
-    assert(!r);
+    assert(r == enclen);
     assert(declen <= sizeof dec);
 
+    assert(declen == sizeof input);
     assert(!strncmp((char *) input, (char *) dec, sizeof input));
 
     unittest_finish();
